--- a/hello-build/index.html
+++ b/hello-build/index.html
@@ -26,10 +26,27 @@
 
 <body>
 <header>
-  <h1>Hello.</h1>
-<h2>I <span>design</span> and <span>develop</span> for the web. <a href="#" class="hire-btn">Hire me</a></h2>  
-
+  <nav class="flex-container">
+      <h1 class="logo"><img src="img/logo.svg" alt="Business Logo"></h1>
+      <ul class="flex-container">
+        <li>Products</li>
+        <li>Services</li>
+        <li>Commercial</li>
+        <li>Residential</li>
+        <li>Reviews</li>
+      </ul>
+      <ul class="nav-buttons flex-container">
+        <li><a href="#">Sign in</a></li>
+        <li><a href="#">Sign up</a></li>
+      </ul>
+    </nav>
+  
 </header>
+<section>
+  <h1>Hello.</h1>
+  <h2>I <span>design</span> and <span>develop</span> for the web. <a href="#" class="hire-btn">Hire me</a></h2>  
+</section>
+
 
 <div class="card-deck">
 <section>
